[build-system]
requires = ["setuptools>=64", "setuptools-scm>=6.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
write_to = "src/__PACKAGE_NAME__/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
__CLASS_NAME__ = ["data/*.*"]

[project.entry-points."karabo.bound_device"]
__CLASS_NAME__ = "__PACKAGE_NAME__.__CLASS_NAME__:__CLASS_NAME__"

[project]
dynamic = ["version"]
name = "__CLASS_NAME__"
authors = [
    {name = "__EMAIL__"},
]
description = ""
readme = "README.md"
dependencies = [
]
